# autotech_task

./: CMakeLists.txt  README.md  main.cpp
Application/Private/: XYReceiver.cpp  XYTransceiver.cpp  XYTransmitter.cpp
Application/Public/: Protocol.h  XY.h  XYReceiver.h  XYTransceiver.h  XYTransmitter.h
PhysicalLayerEmulator/Private/: PhysicalLayerEmulator.cpp
PhysicalLayerEmulator/Public/: PhysicalLayerEmulator.h
TransportLayer/Private/: TransportLayerInterfaceFabric.cpp
TransportLayer/Private/Can/: CanInterface.cpp  CanInterface.h
TransportLayer/Public/: TransportInterface.h  TransportInterfaceFabric.h
Utils/: CommonDefs.h  ThreadSafeLogger.cpp  ThreadSafeLogger.h
